--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,15 @@
     "MultilevelInheritance.C": "cpp",
     "HierarchicalInheritance.C": "cpp",
     "fstream": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "*.tcc": "cpp",
+    "iosfwd": "cpp"
   },
   "spellright.language": [
     "en"
   ],
   "spellright.documentTypes": [
     "markdown",
-    "latex",
-    "plaintext"
+    "latex"
   ]
 }
