--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,30 @@
     "type_traits": "cpp",
     "cmath": "cpp",
     "streambuf": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "atomic": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "vector": "cpp",
+    "exception": "cpp",
+    "iterator": "cpp",
+    "memory_resource": "cpp",
+    "initializer_list": "cpp",
+    "iomanip": "cpp",
+    "limits": "cpp",
+    "new": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
+    "typeinfo": "cpp"
   },
   "spellright.language": [
     "en"
